--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -59,4 +59,5 @@
 	<color name="main_label_text_color">#fff5ee</color>
 	<color name="main_label_background_color">#3366dd</color>
 	<color name="header_text_color">#fff5ee</color>
+	<color name="store_item_divider_color">#f62222</color>
 </resources>
