--- a/res/layout/completedgames.xml
+++ b/res/layout/completedgames.xml
@@ -38,22 +38,10 @@
 	>
 		<com.riotapps.word.ui.MainFontTextView
 		        style="@style/ContentAreaTextTopStyle"
+		           android:paddingTop="0dp"
+		        android:layout_height="12dp"
 		        />
-		    <com.riotapps.word.ui.MainFontTextView
-		 		android:layout_marginTop="-32dp"
-		        android:background="@drawable/form_item_top"
-		        android:textSize="14dp"
-		        android:text="@string/completed_games_title" 
-		        android:id="@+id/header"
-		        android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textColor="@color/button_text_color"
-	 
-				android:paddingBottom="5dp"
-				android:paddingLeft="16dp"
-				android:paddingRight="16dp"
-				android:paddingTop="5dp"
-		        /><LinearLayout 
+		  <LinearLayout 
             style="@style/ContentAreaTextBottomStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
