--- a/res/layout/fullrules.xml
+++ b/res/layout/fullrules.xml
@@ -38,22 +38,10 @@
 	>
 		<com.riotapps.word.ui.MainFontTextView
 		        style="@style/ContentAreaTextTopStyle"
+		           android:paddingTop="0dp"
+		        android:layout_height="12dp"
 		        />
-		    <com.riotapps.word.ui.MainFontTextView
-		 		android:layout_marginTop="-32dp"
-		        android:background="@drawable/form_item_top"
-		        android:textSize="14dp"
-		        android:text="@string/full_rules_title" 
-		        android:id="@+id/header"
-		        android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textColor="@color/button_text_color"
-	 
-				android:paddingBottom="5dp"
-				android:paddingLeft="16dp"
-				android:paddingRight="16dp"
-				android:paddingTop="5dp"
-		        /><LinearLayout 
+		  <LinearLayout 
             style="@style/ContentAreaTextBottomStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -70,7 +58,12 @@
     	android:layout_height="fill_parent" 
 		android:orientation="vertical"
 	    > 
-	
+	 <!-- the letters -->
+   <com.riotapps.word.ui.MainFontTextView
+       style="@style/ContentAreaTextStyle"
+        android:text="@string/full_rules_letters_0" 
+        android:paddingBottom="1dp"
+        />
     <com.riotapps.word.ui.MainFontTextView
         style="@style/ContentAreaTextStyle"
         android:text="@string/full_rules_1" 
@@ -405,12 +398,13 @@
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:background="@color/content_area_background_color"
+    		android:layout_below="@id/full_rules_scoring_4"
  		 >
     	<RelativeLayout
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:id="@+id/bonus2l"
-    		android:layout_below="@id/full_rules_scoring_4"
+
     	>
       <ImageView 
  		    android:paddingLeft="10dp"
@@ -585,13 +579,7 @@
         	android:text="@string/full_rules_finish_4" 
         	android:paddingLeft="10dp"
         	android:paddingBottom="1dp"
-        />
- 		<com.riotapps.word.ui.MainFontTextView
-       		style="@style/ContentAreaTextStyle"
-        	android:text="@string/full_rules_finish_5" 
-        	android:paddingLeft="10dp"
-        	android:paddingBottom="1dp"
-        />
+        /> 
  		<!-- dictionary -->
  		<com.riotapps.word.ui.MainFontTextView
        style="@style/ContentAreaTextAreaStyle"
