--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -38,6 +38,7 @@
  		
     	 >
 			<LinearLayout 
+			    android:layout_gravity="center_horizontal"
 			    android:layout_width="fill_parent"
     			android:layout_height="wrap_content" 
     			android:orientation="vertical"
