--- a/res/layout/toparealayout.xml
+++ b/res/layout/toparealayout.xml
@@ -11,19 +11,26 @@
     	style="@style/TopLogoAreaStyle"
     
     	>
- 
-
-	
         <ImageView 
          android:id="@+id/logo"
 	     style="@style/TopLogoStyle"  
 	    />
-
        <com.riotapps.word.ui.MainFontTextView
+ 			style="@style/ActivityTitleStyle"
  			android:id="@+id/tvActivityTitle"
-        	android:textSize="18sp" 
         	android:layout_alignParentRight="true"
  		  	android:layout_marginRight="10dp"
+ 		  	android:layout_centerVertical="true"
+ 		    android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        />
+       
+    <com.riotapps.word.ui.MainFontTextView
+ 			android:id="@+id/tvNumWins"
+        	android:textSize="14sp" 
+        	  
+		 android:layout_toLeftOf="@id/options"
+ 		  android:layout_marginRight="8dp"
  		  	android:layout_centerVertical="true"
  		    android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
@@ -40,8 +47,15 @@
         android:layout_height="wrap_content"
          android:background="@drawable/options"  
 		/>
+       
+      
           
      </RelativeLayout>
+     <View 
+         android:layout_width="fill_parent"
+         android:layout_height="2dp"
+         android:background="@color/header_bottom_border_color"
+         />
      
   
     
