--- a/res/values-xlarge/scoreboardnumpointsstyle.xml
+++ b/res/values-xlarge/scoreboardnumpointsstyle.xml
@@ -6,6 +6,7 @@
    	<item name="android:textColor">@color/scoreboard_text_color</item>   	
    	<item name="android:textSize">18sp</item> 
    	<item name="android:gravity">right</item> 
-   	<item name="android:layout_below">@id/tvLettersLeft</item>    	
+   	<item name="android:layout_below">@id/tvLettersLeft</item>  
+   	 	<item name="android:layout_marginRight">3dp</item>  	
 </style>
 </resources>
