--- a/res/layout/gamehistory.xml
+++ b/res/layout/gamehistory.xml
@@ -35,19 +35,9 @@
 		        style="@style/ContentAreaTextTopStyle"
 		        />
 		    <com.riotapps.word.ui.MainFontTextView
-		 		android:layout_marginTop="-34dp"
-		        android:background="@drawable/form_item_top"
-		        style="@style/TextStyle"
+		        style="@style/InlineHeaderStyle"
 		        android:text="@string/game_history_title" 
-		        android:id="@+id/header"
-		        android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textColor="@color/button_text_color"
-	 
-				android:paddingBottom="5dp"
-				android:paddingLeft="16dp"
-				android:paddingRight="16dp"
-				android:paddingTop="5dp"
+		        android:id="@+id/header"     
 		        />
 	 			<LinearLayout
 	 			    android:layout_height="fill_parent"
