--- a/res/layout/gamelookup.xml
+++ b/res/layout/gamelookup.xml
@@ -35,19 +35,9 @@
 		        style="@style/ContentAreaTextTopStyle"
 		        />
 		    <com.riotapps.word.ui.MainFontTextView
-		 		android:layout_marginTop="-32dp"
-		        android:background="@drawable/form_item_top"
-		        android:textSize="14dp"
+		        style="@style/InlineHeaderStyle"
 		        android:text="@string/game_lookup_title" 
-		        android:id="@+id/header"
-		        android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textColor="@color/button_text_color"
-	 
-				android:paddingBottom="5dp"
-				android:paddingLeft="16dp"
-				android:paddingRight="16dp"
-				android:paddingTop="5dp"
+		        android:id="@+id/header"    
 		        />
 	 			<RelativeLayout
 	 			    android:layout_height="fill_parent"
@@ -98,14 +88,15 @@
 	 				
 	 				  	 
 		    		  <ScrollView   
+		    		    android:id="@+id/scroller"
 				    	android:layout_below="@id/tvPreviewMessage"
 				    	android:layout_width="fill_parent"
 				    	android:layout_height="fill_parent" 
 				    	android:fadingEdge="none"
 				    	android:layout_marginRight="5dp"  
  				    	android:layout_marginLeft="5dp"  
- 				    	android:layout_marginBottom="50dp"  
- 				    	 >
+ 				    	android:layout_marginBottom="50dp"
+ 				    	>
 				   
 				    	 <LinearLayout
 						    android:layout_width="fill_parent"
