--- a/res/layout/gamesurface.xml
+++ b/res/layout/gamesurface.xml
@@ -9,7 +9,7 @@
 	    android:layout_height="wrap_content"  
 	 >
     	<com.riotapps.word.ui.GameSurfaceView 
-    	    android:layout_below="@id/topAreaLayout"
+    	   
         	android:id="@+id/gameSurface"
         	android:layout_margin="0dp"
         	android:background="@null"
@@ -18,6 +18,7 @@
     </RelativeLayout>
 
 	<LinearLayout
+	     android:id="@+id/llButtons"
         style="@style/GameBoardButtonAreaStyle">
 	<com.riotapps.word.ui.ScoreboardButton 
   	    style="@style/GameBoardButtonStyle"
@@ -25,7 +26,7 @@
         android:layout_width="0dp" 
         android:layout_weight="1.0"
         android:text="@string/gameboard_played_words_button_text"
-        android:maxWidth="100dp"
+        
     />
  	<com.riotapps.word.ui.ScoreboardButton 
   	    style="@style/GameBoardButtonStyle"
@@ -33,7 +34,7 @@
         android:layout_width="0dp" 
         android:layout_weight="1.0"
         android:text="@string/gameboard_hopper_peek_button_text"
-        android:maxWidth="100dp"
+     
     />
 	  <com.riotapps.word.ui.ScoreboardButton 
   	    style="@style/GameBoardButtonStyle"
