--- a/res/values-large/integers.xml
+++ b/res/values-large/integers.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="scoreboard_height">44</integer>
+    <integer name="scoreboard_height">42</integer>
      <integer name="gameboard_button_area_height">56</integer>
+     <integer name="gameboard_lookup_words_width">300</integer>
+     <integer name="gameboard_lookup_words_height">40</integer>
      <integer name="player_image_width">44</integer>
           <integer name="main_landing_1_opponent_text_size">16</integer>
      <integer name="main_landing_2_opponents_text_size">15</integer>
