--- a/res/values-xlarge/alertbuttonareastyle.xml
+++ b/res/values-xlarge/alertbuttonareastyle.xml
@@ -4,15 +4,13 @@
     name="AlertButtonAreaStyle"
   >
   	<item name="android:textSize">22sp</item>
-    <item name="android:layout_width">54dp</item>
-	<item name="android:layout_height">wrap_content</item>    
+    <item name="android:layout_width">fill_parent</item>
+	<item name="android:layout_height">48dp</item>    
     <item name="android:textColor">@color/alert_text_button_color</item>
     <item name="android:gravity">center</item>
     <item name="android:layout_below">@id/alert_text</item>
-    <item name="android:layout_marginTop">16dp</item>
-    <item name="android:layout_marginBottom">16dp</item>
-    <item name="android:paddingTop">10dp</item>
-    <item name="android:paddingBottom">10dp</item>
+    <item name="android:layout_marginTop">14dp</item>
+    <item name="android:layout_marginBottom">2dp</item>
     <item name="android:background">@drawable/alert_bottom_selector</item>
  </style>
 </resources>
