--- a/res/values-xlarge/scoreboardopponentscorestyle.xml
+++ b/res/values-xlarge/scoreboardopponentscorestyle.xml
@@ -3,9 +3,9 @@
 <style
     name="ScoreboardOpponentScoreStyle" >
    	<item name="android:layout_width">wrap_content</item>
-   	<item name="android:layout_height">wrap_content</item>
+   	<item name="android:layout_height">54dp</item>
    	<item name="android:layout_toRightOf">@id/tvOpponentName</item>
-   	<item name="android:layout_marginTop">0dp</item>   	
+   	<item name="android:gravity">center_vertical</item>   	
    	<item name="android:textSize">36sp</item> 
    	<item name="android:layout_marginRight">16dp</item> 
 </style>
