--- a/res/values/alertbuttonareastyle.xml
+++ b/res/values/alertbuttonareastyle.xml
@@ -5,7 +5,7 @@
   >
   	<item name="android:textSize">18sp</item>
     <item name="android:layout_width">fill_parent</item>
-	<item name="android:layout_height">wrap_content</item>    
+	<item name="android:layout_height">36dp</item>     
     <item name="android:textColor">@color/alert_text_button_color</item>
     <item name="android:gravity">center</item>
     <item name="android:layout_below">@id/alert_text</item>
