--- a/res/values/integers.xml
+++ b/res/values/integers.xml
@@ -2,6 +2,8 @@
 <resources>
     <integer name="scoreboard_height">32</integer>
      <integer name="gameboard_button_area_height">48</integer>
+     <integer name="gameboard_lookup_words_width">200</integer>
+     <integer name="gameboard_lookup_words_height">40</integer>
      <integer name="player_image_width">34</integer>
      <integer name="playtomics_game_id">982859</integer>
      <integer name="main_landing_1_opponent_text_size">16</integer>
